--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.73.1",
     "react-native-config": "^1.5.1",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
