--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 ENVIRONMENT=dev
-CAT_API_KEY=from here you can your own API key https://thecatapi.com/signup
+CAT_API_KEY=from here you can get your own API key https://thecatapi.com/signup
+CAT_API_URL=https://api.thecatapi.com/v1/
