--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.5",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-config": "^1.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-query": "^3.39.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
