--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/netinfo": "^11.2.1",
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.17.7",
+    "@testing-library/react": "^13.4.0",
     "axios": "^1.6.5",
     "react": "18.2.0",
     "react-native": "0.73.1",
@@ -30,6 +31,7 @@
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.6",
