--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@react-native-community/netinfo": "^11.2.1",
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.17.7",
-    "@testing-library/react": "^13.4.0",
     "axios": "^1.6.5",
     "react": "18.2.0",
     "react-native": "0.73.1",
@@ -39,6 +38,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "nock": "^13.5.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
