complete env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ENVIRONMENT=dev
 CAT_API_KEY=from here you can get your own API key https://thecatapi.com/signup
 CAT_API_URL=https://api.thecatapi.com/v1/
+SERVER=127.0.0.1:3000
